finish people page

--- a/uoit/imaginglab/site/people.html
+++ b/uoit/imaginglab/site/people.html
@@ -38,120 +38,45 @@
             </div>
         </div>
 
-        <div id="content" class="clearfix shadow">
-            <h2>Members</h2>
-            <h3>
-                <span style="font-weight: bold;">
-                    <img style="width: 133px; height: 107px;"
-                         title="Mehran Ebrahimi" alt="Mehran Ebrahimi" src="images/MehranEbrahimi.jpg">
-                </span>
-            </h3>
-            <span style="font-weight: bold;">
-                Mehran Ebrahimi, PhD<br>
-            </span>Assistant Professor<br>
-            <font size="2">
-                Faculty of Science, UOIT<br>
-            </font><br>
-            <font style="font-weight: bold;" size="2"><span style="color:black">Education</span></font><br> Postdoctoral Fellowship
-            <font size="2">
-                <span style="color:black">
-                    <span class="GramE">
-                        <span style="color: #666666;">,</span>
-                    </span>
-                </span><a href="http://medbio.utoronto.ca/">
-                    Dept. of Medical
-                    Biophysics
-                </a>, <a href="http://www.utoronto.ca/">
-                    University of
-                    Toronto
-                </a><span style="color:black">, </span>Imaging Research, <a href="http://www.sunnybrook.ca/">
-                    Sunnybrook
-                    Health Sciences Centre
-                </a><span style="color:black">
-                </span>
-            </font>
-            <font size="2">(2008-2013)</font>
-            <font size="2">
-                <span style="color:black">
-                    <br>
-                </span>
-            </font>
-            <font size="2">
-                PhD, <span style="color:black">
-                    <a href="http://www.math.uwaterloo.ca/AM_Dept/">
-                        Department of
-                        Applied Mathematics
-                    </a>, <a href="http://www.uwaterloo.ca">
-                        University
-                        of Waterloo
-                    </a>
-                </span>
-            </font>
-            <font size="2">, Waterloo, Ontario, Canada (2003-2008)</font>
-            <font size="2">
-                <br>
-                <br>
-            </font>
-            <font style="font-weight: bold;" size="2"><span style="color:black">Awards</span></font><br>
-            <font size="2">
-                Canadian Breast Cancer Foundation (CBCF) Postdoctoral Fellowship
-            </font> (2010-2013)<br>
-            <font size="2">
-                NSERC Postdoctoral Fellowship (2009-2010)<br>
-                <br>
-                <br>
-            </font>
-            <h2>Graduate Students</h2>
-            <br>
-            <font size="2">
-                <font size="2">
-                    •&nbsp; <span style="font-weight: bold;">
-                        Mia
-                        Carmela Mojica
-                    </span> (PhD student, to start in September 2016), MSc graduate in Applied Mathematics from the
-                    Philippines. <br>
-                    <br>
-                </font>•<span style="font-weight: bold;"> Lorraine Ma</span> (MSc student, Sept. 2014 to present), Lorraine is investigating
-                image registration schemes for Cardiac MRI for which the data is provided by Prof. Graham Wright (Sunnybrook Research
-                Institute). Lorraine won the people’s choice award at the 2016 Three Minute Thesis (3MT®). She is aiming to defend
-                her thesis in August 2015 and join the University of Auckland, New Zealand, as an exchange student in Fall 2016 on
-                a Queen Elizabeth II Diamond Jubilee Scholarship.<br>
-                <br> • <span style="font-weight: bold;">Ghazal Ahmadian</span> (MSc student, January 2015 to present), Co-supervised
-                with Dr. Sean Bohun. Ghazal is investigating breast image registration schemes aimed at Computer aided surgery (CAS),
-                for which the data is provided by Dr. Anne Martel (Sunnybrook Research Institute).<br>
-                <br>
-                <span style="font-weight: bold;">• Sancgeetha Kulaseharan</span> (MSc student, September 2015 to present), Co-supervised
-                with Dr. Elysa Widjaja (Hospital for Sick Children, Toronto), Working on combined texture and morphometric analyses
-                of MR imaging to identify focal cortical dysplasia in children with focal epilepsy.<br>
-                <br>
-                <span style="font-weight: bold;">• Cory Falconer</span> (MSc student, September 2015 to present), Co-supervised with
-                Dr. Sean Bohn, Cory is investigating resolution enhancement and denoising techniques for medical imaging applications.<br>
-                <br>
-            </font><br>
-            <h2>Undergraduate Research Students</h2>
-            <font size="2">
-                <br>
-                <span style="font-weight: bold;">• Eric NG</span> (NSERC USRA, May-August 2015). Eric's research on Joint Motion
-                Estimation and Super-resolution has resulted to a few publications. He will start working on his undergraduate thesis
-                in 2016-2017 under my supervision.<br>
-                <br>
-                <span style="font-weight: bold;">• Queenie Leung</span> (Undergraduate Thesis Student in Applied and Industrial Math,
-                UOIT, Sept 2015 to April 2016). After completing her NSERC USRA, she completed her thesis on Image Segmentation using
-                Graph cuts.<br>
-                <br>
-                <span style="font-weight: bold;">• Xu Han </span>(MITACS Globalink Research Intern, June-August 2015) Visiting from
-                Biomedical Engineering Program, Huazhong University of Science and Technology, Wuhan, China, Project: Registration
-                of Breast MR Images<br>
-                <br>
-                <span style="font-weight: bold;">• Saurabh Agarwal</span> (MITACS Globalink Research Intern, June-August 2015) Visiting
-                from School of Electronics Engineering, VIT, Chennai, India Project: Segmentation of Breast MR Images<br>
-                <br>
-            </font>
-            <font size="2">
-                <br>
-            </font><br>
-        </div>
+        <div id="content" class="clearfix shadow" style="padding: 10px 10px;">
+            <div class="table" style="width:100%; padding-top: 10px">
 
+                <!-- Person detail-->
+                <div id="content_person" class="person">
+                    <div id="content_person_detail" style="display:none">
+                        <div id="content_person_header">
+                            <div style="display:table-cell;">
+                                <img id="content_person_image" />
+                            </div>
+                            <div style="display:table-cell; padding:10px">
+                                <h1 id="content_person_name">[NAME]</h1>
+                                <h4 id="content_person_title">[TITLE]</h4>
+                                <span id="content_person_duration">[START-END]</span>
+                                <div id="content_person_research">[RESEARCH INTERESTS]</div>
+                            </div>
+                        </div>
+                        <br />
+                        <div id="content_person_description">[DESCRIPTION]</div>
+                        <br />
+                        <div id="content_person_publications">[PUBLICATION]</div>
+                    </div>
+                </div>
+
+                <!-- Members list -->
+                <div class="table-cell" style="width: 280px; height:600px; vertical-align:top">
+                    <h2 style="display: inline; padding-right:15px;">Members</h2>
+                    <span>
+                        <a href="#" id="a_all" people-type="1"> All </a>
+                        |
+                        <a href="#" id="a_active" people-type="2"> Active </a>
+                        |
+                        <a href="#" id="a_alumni" people-type="3"> Alumni </a>
+                    </span>
+                    <div style="border-bottom: solid 1px #B6B6B6; height:10px"></div>
+                    <div id="content_people" style="display:none"></div>
+                </div>
+            </div>
+        </div>
         <div id="footer" class="shadow">
             <p>
                 <a href="http://www.uoit.ca">
@@ -162,6 +87,138 @@
             </p>
         </div>
     </div>
+
+    <script type="text/javascript">
+
+        (function () {
+
+            var currentPerson = null;
+
+            page.ready(function (data) {
+
+                $('a[people-type]').click(function (e) {
+                    bindPeople($(this).attr('people-type'));
+                    e.preventDefault();
+                });
+
+                // bind window history change event
+                $(window).bind('popstate', function (e) {
+                    var state = e.originalEvent.state;
+                    if (state && state.name) {
+                        bindPerson(state);
+                    }
+                });
+
+                bindPeople(1);
+            });
+
+            // type: 1: All, 2: Active, 3: Alumni
+            function bindPeople(type) {
+                type = parseInt(type);
+                $("a").removeClass('selected');
+                $('a[people-type=' + type + ']').addClass('selected');
+
+                var people = page.data.people;
+                var current = people[0];
+                var content = $('<div>');
+
+                function fixname(name) {
+                    return (name || '').replace(/ /ig, '_');
+                };
+
+
+                for (var i = 0; i < people.length; i++) {
+                    var person = people[i];
+
+                    // select person when query string parameter is passed
+                    if (window.location.href.toUpperCase().indexOf(fixname(person.name).toUpperCase()) != -1)
+                        current = person;
+
+                    if ((type == 2 & person.alumnus) || type == 3 & !person.alumnus)
+                        continue;
+
+                    var persoan_link = $('<a>').attr('href', '#' + fixname(person.name)).click(function (e) {
+                        bindPerson(this.person);
+
+                        // save history
+                        var url = location.protocol + '//' + location.host + location.pathname + '#' + fixname(this.person.name);
+                        window.history.pushState(this.person, "", url);
+                    });
+                    persoan_link.get(0).person = person;
+
+
+                    var person_content = $('<div>').addClass('people-item');
+                    var person_image = $('<img>').attr('src', person.photo || 'images/noimage.png');
+                    var person_title = $('<div>');
+                    var person_name = $('<h4>' + person.name + (type != 3 && person.alumnus ? ' <label style="font-size:14px">(alumnus)</label>' : '') + '</h4>');
+                    var person_position = $('<span>' + person.position + '</span></div>');
+
+                    persoan_link.append(person_content);
+                    person_content.append(person_image).append(person_title);
+                    person_title.append(person_name).append(person_position);
+
+                    content.append(persoan_link);
+                }
+
+                $('#content_people').fadeOut(function () {
+                    $(this).empty().hide().append(content).fadeIn()
+                });
+
+                bindPerson(current);
+            };
+
+            function bindPerson(person) {
+                if (person == currentPerson) return;
+                currentPerson = person;
+
+                document.title = 'ImagingLab.ca, ' + person.name;
+
+                var photo = person.photo || 'images/noimage.png';
+                var name = person.name;
+                var title = person.title || person.position;
+                var research = person.research ? ('<span style="font-weight: bold">Research interests: </span>' + person.research) : '';
+                var description = person.description;
+                var duration = '';
+                var publications = [];
+
+                for (var i = 0; i < page.data.publications.length; i++) {
+                    var pub = page.data.publications[i];
+
+                    if (!pub.peoplePageVisible || !pub.people)
+                        continue;
+
+                    for (var j = 0; j < pub.people.length; j++) {
+                        if (pub.people[j] == person.id) {
+                            publications.push(pub);
+                            break;
+                        }
+                    }
+                }
+
+                if (person.start) {
+                    duration += '[';
+                    duration += person.start;
+                    duration += ' - ';
+                    duration += (person.end ? person.end : 'Present');
+                    duration += ']';
+                }
+
+                $('#content_person_detail').fadeOut(function () {
+                    $('#content_person_image').attr('src', photo);
+                    $('#content_person_name').html(name);
+                    $('#content_person_title').html(title);
+                    $('#content_person_duration').html(duration);
+                    $('#content_person_research').html(research);
+                    $('#content_person_description').html(description);
+                    $('#content_person_publications').empty();
+                    page.appendPublications($('#content_person_publications'), 'Publications', publications);
+
+                    $('#content_person_detail').fadeIn();
+                });
+            };
+        })();
+
+    </script>
 </body>
 
 </html>
