--- a/uoit/imaginglab/site/p.html
+++ b/uoit/imaginglab/site/p.html
@@ -40,10 +40,30 @@
 
         <div id="content" class="clearfix shadow" style="padding: 10px 10px;">
             <div class="table" style="width:100%; padding-top: 10px">
-                <div id="content_person" class="table-cell">
+
+                <!-- Person detail-->
+                <div id="content_person" class="person">
+                    <div id="content_person_detail" style="display:none">
+                        <div id="content_person_header">
+                            <div style="display:table-cell;">
+                                <img id="content_person_image" />
+                            </div>
+                            <div style="display:table-cell; padding:10px">
+                                <h1 id="content_person_name">[NAME]</h1>
+                                <h4 id="content_person_title">[TITLE]</h4>
+                                <span id="content_person_duration">[START-END]</span>
+                                <div id="content_person_research">[RESEARCH INTERESTS]</div>
+                            </div>
+                        </div>
+                        <br />
+                        <div id="content_person_description">[DESCRIPTION]</div>
+                        <br />
+                        <div id="content_person_publications">[PUBLICATION]</div>
+                    </div>
                 </div>
 
-                <div class="table-cell" style="width: 280px; height:600px">
+                <!-- Members list -->
+                <div class="table-cell" style="width: 280px; height:600px; vertical-align:top">
                     <h2 style="display: inline; padding-right:15px;">Members</h2>
                     <span>
                         <a href="#" id="a_all" people-type="1"> All </a>
@@ -53,7 +73,7 @@
                         <a href="#" id="a_alumni" people-type="3"> Alumni </a>
                     </span>
                     <div style="border-bottom: solid 1px #B6B6B6; height:10px"></div>
-                    <div id="content_people"></div>
+                    <div id="content_people" style="display:none"></div>
                 </div>
             </div>
         </div>
@@ -70,76 +90,133 @@
 
     <script type="text/javascript">
 
-        page.ready(function (data) {
+        (function () {
 
-            $('a[people-type]').click(function (e) {
-                bindPeople($(this).attr('people-type'));
-                e.preventDefault();
+            var currentPerson = null;
+
+            page.ready(function (data) {
+
+                $('a[people-type]').click(function (e) {
+                    bindPeople($(this).attr('people-type'));
+                    e.preventDefault();
+                });
+
+                // bind window history change event
+                $(window).bind('popstate', function (e) {
+                    var state = e.originalEvent.state;
+                    if (state && state.name) {
+                        bindPerson(state);
+                    }
+                });
+
+                bindPeople(1);
             });
 
-            bindPeople(1);
-        });
+            // type: 1: All, 2: Active, 3: Alumni
+            function bindPeople(type) {
+                type = parseInt(type);
+                $("a").removeClass('selected');
+                $('a[people-type=' + type + ']').addClass('selected');
 
-        function bindPeople(type) {
-            type = parseInt(type);
-            $("a").removeClass('selected');
-            $('a[people-type=' + type + ']').addClass('selected');
+                var people = page.data.people;
+                var current = people[0];
+                var content = $('<div>');
 
-            var people = page.data.people;
-            var current = people[0];
-            var content = $('<div>');
+                function fixname(name) {
+                    return (name || '').replace(/ /ig, '_');
+                };
 
-            function urlEncodeName(name) {
-                return name.replace(/ /ig, '_');
+
+                for (var i = 0; i < people.length; i++) {
+                    var person = people[i];
+
+                    // select person when query string parameter is passed
+                    if (window.location.href.toUpperCase().indexOf(fixname(person.name).toUpperCase()) != -1)
+                        current = person;
+
+                    if ((type == 2 & person.alumnus) || type == 3 & !person.alumnus)
+                        continue;
+
+                    var persoan_link = $('<a>').attr('href', '#' + fixname(person.name)).click(function (e) {
+                        bindPerson(this.person);
+
+                        // save history
+                        var url = location.protocol + '//' + location.host + location.pathname + '#' + fixname(this.person.name);
+                        window.history.pushState(this.person, "", url);
+                    });
+                    persoan_link.get(0).person = person;
+
+
+                    var person_content = $('<div>').addClass('people-item');
+                    var person_image = $('<img>').attr('src', person.photo || 'images/noimage.png');
+                    var person_title = $('<div>');
+                    var person_name = $('<h4>' + person.name + (type != 3 && person.alumnus ? ' <label style="font-size:14px">(alumnus)</label>' : '') + '</h4>');
+                    var person_position = $('<span>' + person.position + '</span></div>');
+
+                    persoan_link.append(person_content);
+                    person_content.append(person_image).append(person_title);
+                    person_title.append(person_name).append(person_position);
+
+                    content.append(persoan_link);
+                }
+
+                $('#content_people').fadeOut(function () {
+                    $(this).empty().hide().append(content).fadeIn()
+                });
+
+                bindPerson(current);
             };
 
-            for (var i = 0; i < people.length; i++) {
-                var person = people[i];
+            function bindPerson(person) {
+                if (person == currentPerson) return;
+                currentPerson = person;
 
-                if ((type == 2 & person.alumnus) || type == 3 & !person.alumnus)
-                    continue;
-                
-                if (window.location.href.toUpperCase().indexOf(urlEncodeName(person.name.toUpperCase())) != -1)
-                    current = person;
+                document.title = 'ImagingLab.ca, ' + person.name;
 
-                var persoan_link = $('<a>').attr('href', '#' + person.name).click(function (e) {
-                    e.preventDefault();
-                    bindPerson(this.person);
-                    window.history.pushState(this.person, "", location.protocol + '//' + location.host + location.pathname + '#' + urlEncodeName(this.person.name));
+                var photo = person.photo || 'images/noimage.png';
+                var name = person.name;
+                var title = person.title || person.position;
+                var research = person.research ? ('<span style="font-weight: bold">Research interests: </span>' + person.research) : '';
+                var description = person.description;
+                var duration = '';
+                var publications = [];
+
+                for (var i = 0; i < page.data.publications.length; i++) {
+                    var pub = page.data.publications[i];
+
+                    if (!pub.peoplePageVisible || !pub.people)
+                        continue;
+
+                    for (var j = 0; j < pub.people.length; j++) {
+                        if (pub.people[j] == person.id) {
+                            publications.push(pub);
+                            break;
+                        }
+                    }
+                }
+
+                if (person.start) {
+                    duration += '[';
+                    duration += person.start;
+                    duration += ' - ';
+                    duration += (person.end ? person.end : 'Present');
+                    duration += ']';
+                }
+
+                $('#content_person_detail').fadeOut(function () {
+                    $('#content_person_image').attr('src', photo);
+                    $('#content_person_name').html(name);
+                    $('#content_person_title').html(title);
+                    $('#content_person_duration').html(duration);
+                    $('#content_person_research').html(research);
+                    $('#content_person_description').html(description);
+                    $('#content_person_publications').empty();
+                    page.appendPublications($('#content_person_publications'), 'Publications', publications);
+
+                    $('#content_person_detail').fadeIn();
                 });
-                persoan_link.get(0).person = person;
-
-                var person_content = $('<div>').addClass('people-item');
-                var person_image = $('<img>').attr('src', person.photo || 'images/noimage.png');
-                var person_title = $('<div>');
-                var person_name = $('<h4>' + person.name + (type != 3 && person.alumnus ? ' <label style="font-size:14px">(alumnus)</label>' : '') + '</h4>');
-                var person_position = $('<span>' + person.position + '</span></div>');
-
-                persoan_link.append(person_content);
-                person_content.append(person_image).append(person_title);
-                person_title.append(person_name).append(person_position);
-
-                content.append(persoan_link);
-            }
-
-            //$('#content_people').empty().append(content);
-            $('#content_people').fadeOut(function () {
-                $(this).empty().hide().append(content).fadeIn()
-            });
-
-            bindPerson(current);
-        };
-
-        function bindPerson(person) {
-            document.title = 'ImagingLab.ca, ' + person.name;
-            $('#content_person').empty().append(person.name);
-        };
-
-        window.onpopstate = function (e) {
-            if (e.state && e.state.name) {
-                bindPerson(e.state);
-            }
-        };
+            };
+        })();
 
     </script>
 </body>
