--- a/uoit/imaginglab/site/contact.html
+++ b/uoit/imaginglab/site/contact.html
@@ -2,71 +2,74 @@
 <html>
 
 <head>
-  <title>ImagingLab.ca, Contact</title>
-  <meta content="text/html; charset=utf-8" http-equiv="content-type">
-  <meta name="description" content="ImagingLab, Mehran Ebrahimi, UOIT">
-  <link rel="stylesheet" type="text/css" media="all" href="inland.css">
-  <script type="text/javascript" src="resources/jquery-1.7.1.min.js"></script>
-  <script type="text/javascript" src="resources/jquery.nivo.slider.js"></script>
-  <script type="text/javascript" src="resources/site.js"></script>
+    <title>ImagingLab.ca, Contact</title>
+    <meta content="text/html; charset=utf-8" http-equiv="content-type">
+    <meta name="description" content="ImagingLab, Mehran Ebrahimi, UOIT">
+    <meta name="author" content="Kamyar Nazeri">
+    <meta name="contact" content="kamyar.nzr@gmail.com">
+
+    <link rel="stylesheet" type="text/css" media="all" href="inland.css">
+    <script type="text/javascript" src="resources/jquery-1.7.1.min.js"></script>
+    <script type="text/javascript" src="resources/jquery.nivo.slider.js"></script>
+    <script type="text/javascript" src="resources/site.js"></script>
 </head>
 
 <body>
-  <div id="wrapper960" class="clearfix">
-    <div id="header" class="clearfix shadow">
-      <div style="color: rgb(0, 0, 172);" id="sitetitle" class="clearfix">
-        <h1><a href=".">ImagingLab.ca</a></h1>
-      </div>
-      <div id="nav" class="clearfix">
-        <ul>
-          <li><a href="index.html">Home</a></li>
-          <li><a href="people.html">People</a></li>
-          <li><a href="research.html">Research</a></li>
-          <li><a href="publications.html">Publications</a></li>
-          <li><a href="teaching.html">Teaching</a></li>
-          <li><a class="current" href="contact.html">Contact</a></li>
-        </ul>
-      </div>
-    </div>
-    
-    <div class="slider-wrapper">
-      <div id="slider" class="nivoSlider">
-        <img src="images/slider1.jpg" alt="">
-        <img src="images/slider2.jpg" alt=""> 
-        <img src="images/slider3.jpg" alt="">
-        <img src="images/slider4.jpg" alt="">
-      </div>
-    </div>
+    <div id="wrapper960" class="clearfix">
+        <div id="header" class="clearfix shadow">
+            <div style="color: rgb(0, 0, 172);" id="sitetitle" class="clearfix">
+                <h1><a href=".">ImagingLab.ca</a></h1>
+            </div>
+            <div id="nav" class="clearfix">
+                <ul>
+                    <li><a href="index.html">Home</a></li>
+                    <li><a href="people.html">People</a></li>
+                    <li><a href="research.html">Research</a></li>
+                    <li><a href="publications.html">Publications</a></li>
+                    <li><a href="teaching.html">Teaching</a></li>
+                    <li><a class="current" href="contact.html">Contact</a></li>
+                </ul>
+            </div>
+        </div>
 
-    <div id="content" class="clearfix shadow">
-      <div>
-        <img style="width: 133px; height: 107px; border:solid 1px gray" title="Mehran Ebrahimi" alt="Mehran Ebrahimi" src="images/MehranEbrahimi.jpg" />
-      </div>
-      <br />
-      <div style="font-weight: bold;">Mehran Ebrahimi, PhD</div>
-      <div>Assistant Professor</div>
-      <div>Faculty of Science, UOIT</div> 
-      <div>2000 Simcoe Street North</div>
-      <div>Oshawa, Ontario</div>
-      <div>L1H 7K4 Canada </div> 
-      <div>office: UA-2022</div>
-      <br />
-      <div>E-mail: <a href="mailto:mehran.ebrahimi@uoit.ca" style="text-decoration: underline;">mehran.ebrahimi@uoit.ca</a></div>
-      <div>Tel: (905) 721-8668 ext. 6236</div>
-      <div>Fax: (905) 721-3304</div> 
-      <div>URL: <a href="http://www.ImagingLab.ca" style="text-decoration: underline;">http://www.ImagingLab.ca</a></div>
-    </div>
+        <div class="slider-wrapper">
+            <div id="slider" class="nivoSlider">
+                <img src="images/slider1.jpg" alt="">
+                <img src="images/slider2.jpg" alt="">
+                <img src="images/slider3.jpg" alt="">
+                <img src="images/slider4.jpg" alt="">
+            </div>
+        </div>
 
-    <div id="footer" class="shadow">
-      <p>
-        <a href="http://www.uoit.ca">
-          <img  style="width: 78px; height: 25px;" longdesc="http://www.uoit.ca" title="UOIT" alt="UOIT" src="images/logo-uoit1.jpg" />
-        </a>
-        <br>
-        ©ImagingLab.ca, Dr. Mehran Ebrahimi 
-      </p>
+        <div id="content" class="clearfix shadow">
+            <div>
+                <img style="width: 133px; height: 107px; border:solid 1px gray" title="Mehran Ebrahimi" alt="Mehran Ebrahimi" src="images/MehranEbrahimi.jpg" />
+            </div>
+            <br />
+            <div style="font-weight: bold;">Mehran Ebrahimi, PhD</div>
+            <div>Assistant Professor</div>
+            <div>Faculty of Science, UOIT</div>
+            <div>2000 Simcoe Street North</div>
+            <div>Oshawa, Ontario</div>
+            <div>L1H 7K4 Canada </div>
+            <div>office: UA-2022</div>
+            <br />
+            <div>E-mail: <a href="mailto:mehran.ebrahimi@uoit.ca" style="text-decoration: underline;">mehran.ebrahimi@uoit.ca</a></div>
+            <div>Tel: (905) 721-8668 ext. 6236</div>
+            <div>Fax: (905) 721-3304</div>
+            <div>URL: <a href="http://www.ImagingLab.ca" style="text-decoration: underline;">http://www.ImagingLab.ca</a></div>
+        </div>
+
+        <div id="footer" class="shadow">
+            <p>
+                <a href="http://www.uoit.ca">
+                    <img style="width: 78px; height: 25px;" longdesc="http://www.uoit.ca" title="UOIT" alt="UOIT" src="images/logo-uoit1.jpg" />
+                </a>
+                <br>
+                ©ImagingLab.ca, Dr. Mehran Ebrahimi
+            </p>
+        </div>
     </div>
-  </div>
 </body>
 
 </html>
