--- a/uoit/imaginglab/site/index.html
+++ b/uoit/imaginglab/site/index.html
@@ -5,6 +5,9 @@
     <title>ImagingLab.ca, Mehran Ebrahimi, UOIT</title>
     <meta content="text/html; charset=utf-8" http-equiv="content-type">
     <meta name="description" content="ImagingLab, Mehran Ebrahimi, UOIT">
+    <meta name="author" content="Kamyar Nazeri">
+    <meta name="contact" content="kamyar.nzr@gmail.com">
+
     <link rel="stylesheet" type="text/css" media="all" href="inland.css">
     <script type="text/javascript" src="resources/jquery-1.7.1.min.js"></script>
     <script type="text/javascript" src="resources/jquery.nivo.slider.js"></script>
