--- a/uoit/imaginglab/site/people.html
+++ b/uoit/imaginglab/site/people.html
@@ -174,6 +174,7 @@
                 bindPerson(current);
             };
 
+
             function bindPerson(person) {
                 if (person == currentPerson) return;
                 currentPerson = person;
@@ -219,13 +220,58 @@
                     $('#content_person_duration').html(duration);
                     $('#content_person_research').html(research);
                     $('#content_person_description').html(description);
-                    $('#content_person_publications').empty();
-                    page.appendPublications($('#content_person_publications'), 'Publications', publications);
+                    bindPublications(publications);
 
                     $('#content_person_detail').fadeIn();
                     page.render();
                 });
             };
+
+
+            function bindPublications(items) {
+                var title = 'Publications';
+                var parent = $('#content_person_publications').empty();
+
+                if (items.length == 0) return;
+
+                var item = $('<div><h3>' + title + '</h3></div>');
+                var ul = $("<ul>").css({ 'list-style': 'none' }).appendTo(item);
+
+                for (var i = 0; i < items.length; i++) {
+                    var p = items[i];
+                    var li = $('<li>').appendTo(ul);
+                    if (p.code) li.append('[' + p.code + '] ');
+                    if (p.contributors) li.append(p.contributors);
+                    if (p.year) li.append(' (' + p.year + '). ');
+                    li.append(p.title);
+                    li.append('<br>');
+
+                    var links = $('<div>').appendTo(li);
+
+                    if (p.pdf) {
+                        links.append('<a href="' + p.pdf + '" target="_blank" title="PDF"> [PDF] </a>');
+                    }
+
+                    if (p.url) {
+                        links.append('<a href="' + p.url + '" target="_blank" title="URL"> [URL] </a>');
+                    }
+
+                    if (p.bibtex) {
+                        var bibtex = p.bibtex.replace(/\n/ig, "<br>");
+                        var bibtexLink = $('<a href="javascript:void(0)" title="Bibtex"> [Bibtex] </a>').appendTo(links);
+                        var bintexContent = $('<div>').addClass('bibtex').appendTo(links);
+
+                        bibtexLink.click(function () {
+                            bintexContent.html(bibtex);
+                            bintexContent.slideToggle();
+                        });
+                    }
+
+                    li.append('<br>');
+                };
+
+                item.appendTo(parent);
+            }
         })();
 
     </script>
