--- a/uoit/imaginglab/site/publications.html
+++ b/uoit/imaginglab/site/publications.html
@@ -186,11 +186,54 @@
                 for (var i = 0; i < groups.length; i++) {
                     var grp = groups[i];
                     grp.sort(function (a, b) { return a.code.localeCompare(b.code || "") });
-                    page.appendPublications(content, grp.key, grp);
+                    bindPublicationsGroup(content, grp.key, grp);
                 }
 
                 $('#content_publication').empty().append(content);
             };
+
+
+            function bindPublicationsGroup(parent, title, items) {
+                if (items.length == 0) return;
+                var item = $('<div><h3>' + title + '</h3></div>');
+                var ul = $("<ul>").css({ 'list-style': 'none' }).appendTo(item);
+
+                for (var i = 0; i < items.length; i++) {
+                    var p = items[i];
+                    var li = $('<li>').appendTo(ul);
+                    if (p.code) li.append('[' + p.code + '] ');
+                    if (p.contributors) li.append(p.contributors);
+                    if (p.year) li.append(' (' + p.year + '). ');
+                    li.append(p.title);
+                    li.append('<br />');
+
+                    var links = $('<div>').appendTo(li);
+
+                    if (p.pdf) {
+                        links.append('<a href="' + p.pdf + '" target="_blank" title="PDF"> [PDF] </a>');
+                    }
+
+                    if (p.url) {
+                        links.append('<a href="' + p.url + '" target="_blank" title="URL"> [URL] </a>');
+                    }
+
+                    if (p.bibtex) {
+                        var bibtex = p.bibtex.replace(/\n/ig, "<br/>");
+                        var bibtexLink = $('<a href="javascript:void(0)" title="Bibtex"> [Bibtex] </a>').appendTo(links);
+                        var bintexContent = $('<div>').addClass('bibtex').appendTo(links);
+
+                        bibtexLink.click(function () {
+                            bintexContent.html(bibtex);
+                            bintexContent.slideToggle();
+                        });
+                    }
+
+                    li.append('<br />');
+                };
+
+                item.appendTo(parent);
+            }
+
         })();
 
     </script>
