change contributors to authors

--- a/uoit/imaginglab/site/people.html
+++ b/uoit/imaginglab/site/people.html
@@ -245,7 +245,7 @@
                     var p = items[i];
                     var li = $('<li>').appendTo(ul);
                     if (p.code) li.append('[' + p.code + '] ');
-                    if (p.contributors) li.append(p.contributors);
+                    if (p.authors) li.append(p.authors);
                     if (p.year) li.append(' (' + p.year + '). ');
                     li.append(p.title);
                     li.append('<br>');
