--- a/uoit/imaginglab/site/publications.html
+++ b/uoit/imaginglab/site/publications.html
@@ -162,9 +162,7 @@
                 (by_year ? $('#a_year') : $('#a_type')).addClass('selected');
 
                 pubs.sort(function (a, b) {
-                    var res = by_year ? (b.year - a.year) : (types.indexOf(a.type) - types.indexOf(b.type));
-                    if (res == 0) res = a.order - b.order;
-                    return res;
+                    return by_year ? (b.year - a.year) : (types.indexOf(a.type) - types.indexOf(b.type));
                 });
 
                 var keys = {};
@@ -187,7 +185,7 @@
 
                 for (var i = 0; i < groups.length; i++) {
                     var grp = groups[i];
-                    grp.sort(function (a, b) { return a.code.localeCompare(b.code || "") });
+                    grp.sort(function (a, b) { return a.order - b.order });
                     bindPublicationsGroup(content, grp.key, grp);
                 }
 
@@ -216,9 +214,9 @@
                 for (var i = 0; i < items.length; i++) {
                     var p = items[i];
                     var li = $('<li>').appendTo(ul);
-                    if (p.code) li.append('[' + p.code + '] ');
+                    if (p.code) li.append('[<span style="font-weight:bold">' + p.code + '</span>] ');
                     if (p.authors) li.append(p.authors);
-                    if (p.year) li.append(' (' + p.year + '). ');
+                    if (p.year) li.append(p.year);
                     li.append(p.title);
                     li.append('<br />');
 
